--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mesh-brain-games",
+  "name": "mege-brain-games",
   "version": "1.0.0",
   "description": "Brain Games",
   "main": "index.js",
