--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mege-brain-games",
   "version": "1.0.0",
   "description": "Brain Games",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -30,6 +30,11 @@
   },
   "files": [
     "dist"
+  ],
+  "keywords": [
+    "game",
+    "BrainGames",
+    "consoleGame"
   ],
   "dependencies": {
     "readline-sync": "^1.4.9"
