--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "readline-sync": "^1.4.9"
   },
   "files": [
     "dist"
@@ -37,6 +38,6 @@
     "consoleGame"
   ],
   "dependencies": {
-    "readline-sync": "^1.4.9"
+    "@babel/polyfill": "^7.4.3"
   }
 }
