--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mege-brain-games",
-  "version": "1.0.0",
+  "version": "1.1.3",
   "description": "Brain Games",
   "main": "",
   "scripts": {
@@ -26,8 +26,7 @@
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
-    "eslint": "^5.16.0",
-    "readline-sync": "^1.4.9"
+    "eslint": "^5.16.0"
   },
   "files": [
     "dist"
@@ -38,6 +37,7 @@
     "consoleGame"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.4.3"
+    "@babel/polyfill": "^7.4.3",
+    "readline-sync": "^1.4.9"
   }
 }
