--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
-    "eslint": "^5.16.0"
+    "babel-eslint": "^10.0.1",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-lodash-fp": "^2.2.0-a1"
   },
   "files": [
     "dist"
