add victory condition evenGame

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,6 +1,13 @@
-extends:
-  - 'airbnb-base'
+plugins:
+  - babel
+
 env:
   node: true
+
+parser: babel-eslint
+
+extends:
+  - 'airbnb-base'
+
 rules:
   no-console: 0
