--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js", 
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "homepage": "https://github.com/meshcherov/project-lvl1-s474#readme",
   "devDependencies": {
