--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js", 
+    "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js"
   },
   "homepage": "https://github.com/meshcherov/project-lvl1-s474#readme",
@@ -46,6 +46,7 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.4.3",
+    "hexlet-pairs": "^1.0.8",
     "readline-sync": "^1.4.9"
   }
 }
