--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mege-brain-games",
-  "version": "1.2.6",
+  "version": "1.3.1",
   "description": "Brain Games",
   "main": "",
   "scripts": {
@@ -20,7 +20,8 @@
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
     "brain-even": "dist/bin/brain-even.js",
-    "brain-calc": "dist/bin/brain-calc.js"
+    "brain-calc": "dist/bin/brain-calc.js",
+    "brain-gcd": "dist/bin/brain-gcd.js"
   },
   "homepage": "https://github.com/meshcherov/project-lvl1-s474#readme",
   "devDependencies": {
