--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mege-brain-games",
-  "version": "1.4.3",
+  "version": "1.5.0",
   "description": "Brain Games",
   "main": "",
   "scripts": {
@@ -22,7 +22,8 @@
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
   },
   "homepage": "https://github.com/meshcherov/project-lvl1-s474#readme",
   "devDependencies": {
